# sportscast-ai

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dashboard/backend/: .env.example  Dockerfile  requirements.txt
dashboard/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
examples/: live_stream_example.py  no_api_key_example.py  recorded_match_example.py
pipeline/: __init__.py  __main__.py  cli.py  cli_output.py  config.py  runner.py
pipeline/agent/: __init__.py  clip_generator.py  commentary_agent.py  highlight_agent.py
pipeline/audio/: __init__.py  classifier.py  feature_extractor.py  model.py  pretrained_weights.py
pipeline/evaluation/: __init__.py  benchmarker.py  labeled_clips.py  metrics.py
pipeline/fusion/: __init__.py  confidence_scorer.py  review_queue.py  signal_fuser.py
pipeline/ingestor/: __init__.py  stream_manager.py  video_ingestor.py
pipeline/kafka/: __init__.py  consumer.py  producer.py  schemas.py  topics.py
pipeline/models/: __init__.py  event.py
pipeline/schemas/: __init__.py  event.py
pipeline/speech/: __init__.py  commentary_parser.py  mock_transcriber.py  transcriber.py
pipeline/testing/: __init__.py  mock_pipeline.py  sample_data.py
tests/: conftest.py  test_api.py  test_audio_classifier.py  test_benchmarker.py  test_commentary_agent.py  test_confidence_scorer.py  test_event_detector.py  test_frame_extractor.py  test_signal_fuser.py  test_transcriber.py  test_video_ingestor.py
(+46 files in other folders)
