[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sportscast-ai"
version = "0.1.0"
description = "Real-time multimodal sports event intelligence pipeline"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "openai>=1.30.0",
    "anthropic>=0.26.0",
    "langchain>=0.2.0",
    "langgraph>=0.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "confluent-kafka>=2.4.0",
    "torch>=2.3.0",
    "torchaudio>=2.3.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "yt-dlp>=2024.5.0",
]

[project.optional-dependencies]
dashboard = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "websockets>=12.0",
]
speech = [
    "openai-whisper>=20231117",
]
vision-local = [
    "transformers>=4.41.0",
    "Pillow>=10.0.0",
    "accelerate>=0.30.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
